add: schichttyp
